[gd_scene load_steps=18 format=3 uid="uid://dk6k6kbikpv6s"]

[ext_resource type="Script" path="res://scripts/rabbit_with_sword.gd" id="1_3ak0f"]
[ext_resource type="PackedScene" uid="uid://mk64wabl8fv4" path="res://scenes/attack_area.tscn" id="2_gnnfb"]
[ext_resource type="PackedScene" uid="uid://cm1pnr373vbie" path="res://scenes/rabbit_with_sword_sprite.tscn" id="2_rdov8"]
[ext_resource type="PackedScene" uid="uid://cr87fdyx5cywf" path="res://scenes/hitbox.tscn" id="3_ouyfq"]
[ext_resource type="PackedScene" uid="uid://d22ttfbgqyq0f" path="res://scenes/hp_bar.tscn" id="4_hwb5u"]
[ext_resource type="PackedScene" uid="uid://c64kdkeybuyfm" path="res://scenes/steering.tscn" id="5_aomsh"]
[ext_resource type="PackedScene" uid="uid://ck5j4uyt7yhnn" path="res://scenes/navigation_agent.tscn" id="6_ynh81"]
[ext_resource type="PackedScene" uid="uid://c6vldeo6sa1k8" path="res://scenes/vision_area.tscn" id="7_r8tuc"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="8_hneae"]
[ext_resource type="Script" path="res://scripts/mob_states/rabbit_with_sword/rabbit_with_sword_idle.gd" id="9_wdq6n"]
[ext_resource type="Script" path="res://scripts/mob_states/rabbit_with_sword/rabbit_with_sword_moving.gd" id="10_6hvgf"]
[ext_resource type="Script" path="res://scripts/mob_states/rabbit_with_sword/rabbit_with_sword_attacking.gd" id="11_enw75"]
[ext_resource type="Script" path="res://scripts/mob_states/rabbit_with_sword/rabbit_with_sword_dying.gd" id="12_4etmg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2r8wd"]
radius = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jdhx6"]
radius = 4.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iq52i"]
radius = 200.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bwj2i"]
radius = 5.0
height = 38.0

[node name="RabbitWithSword" type="CharacterBody2D"]
script = ExtResource("1_3ak0f")

[node name="AttackArea" parent="." instance=ExtResource("2_gnnfb")]
unique_name_in_owner = true
position = Vector2(0, -35)
collision_mask = 4

[node name="AttackDist" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_2r8wd")
debug_color = Color(0.909804, 0, 0.737255, 0)

[node name="CollisionShape" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(-1, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jdhx6")
debug_color = Color(0, 0.6, 0.701961, 0.0666667)

[node name="VisionArea" parent="." instance=ExtResource("7_r8tuc")]
unique_name_in_owner = true
collision_mask = 4

[node name="VisionRange" type="CollisionShape2D" parent="VisionArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_iq52i")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="HpBar" parent="." instance=ExtResource("4_hwb5u")]
unique_name_in_owner = true
offset_left = -11.0
offset_top = -43.0
offset_right = 10.0
offset_bottom = -39.0

[node name="Sprite" parent="." instance=ExtResource("2_rdov8")]
unique_name_in_owner = true
scale = Vector2(0.4, 0.4)

[node name="Hitbox" parent="." instance=ExtResource("3_ouyfq")]
unique_name_in_owner = true
position = Vector2(-1, -15)
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
unique_name_in_owner = true
position = Vector2(-1, -2)
shape = SubResource("CapsuleShape2D_bwj2i")
debug_color = Color(0, 0.647059, 0.266667, 0.0392157)

[node name="Steering" parent="." instance=ExtResource("5_aomsh")]
unique_name_in_owner = true

[node name="NavAgent" parent="." instance=ExtResource("6_ynh81")]
unique_name_in_owner = true

[node name="RabbitWithSwordStateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("8_hneae")

[node name="Idle" type="Node" parent="RabbitWithSwordStateMachine"]
script = ExtResource("9_wdq6n")

[node name="Moving" type="Node" parent="RabbitWithSwordStateMachine"]
script = ExtResource("10_6hvgf")

[node name="Attacking" type="Node" parent="RabbitWithSwordStateMachine"]
script = ExtResource("11_enw75")

[node name="Dying" type="Node" parent="RabbitWithSwordStateMachine"]
script = ExtResource("12_4etmg")

[node name="Audible" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
